--- a/caddy/docker-compose.yaml
+++ b/caddy/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   caddy:
     image: mritd/caddy
     container_name: caddy
-    restart: always
+    restart: unless-stopped
     networks:
       - caddy
     env_file: .env
