--- a/idgen/docker-compose.yaml
+++ b/idgen/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
     container_name: idgen
     networks:
       - caddy
-    restart: always
+    restart: unless-stopped
 
 networks:
   caddy:
