--- a/activemq/docker-compose.yaml
+++ b/activemq/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   activemq:
     image: rmohr/activemq:5.15.4-alpine
     container_name: activemq
-    restart: always
+    restart: unless-stopped
     volumes: 
       - data:/data
     ports:
