--- a/hysteria/docker-compose.yaml
+++ b/hysteria/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   hysteria:
     image: mritd/hysteria
     container_name: hysteria
-    restart: always
+    restart: unless-stopped
     network_mode: "host"
     volumes:
       - ./conf:/etc/hysteria
