--- a/mritd.com/docker-compose.yaml
+++ b/mritd.com/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   mritd_com:
     image: mritd/mritd.com
     container_name: mritd_com
-    restart: always
+    restart: unless-stopped
     networks:
       - caddy
     environment:
