--- a/nexus3/docker-compose.yaml
+++ b/nexus3/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   nexus:
     image: sonatype/nexus3:3.28.1
     container_name: nexus
-    restart: always
+    restart: unless-stopped
     ports:
       - "8081:8081"
     volumes:
