--- a/nginx/docker-compose.yaml
+++ b/nginx/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   nginx:
     image: nginx:1.19-alpine
     container_name: nginx
-    restart: always
+    restart: unless-stopped
     networks:
       - nginx
     environment:
