--- a/registry/docker-compose.yaml
+++ b/registry/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
   registry:
     image: registry:2.7
-    restart: always
+    restart: unless-stopped
     networks:
       - nginx
     volumes:
