--- a/shadowsocks2/docker-compose.yaml
+++ b/shadowsocks2/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
   shadowsocks:
     image: mritd/shadowsocks2
     container_name: shadowsocks2
-    restart: always
+    restart: unless-stopped
     ports:
       - "26:26"
       - "26:26/udp"
