--- a/sonar/docker-compose.yaml
+++ b/sonar/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   sonar:
     image: sonarqube
     container_name: sonar
-    restart: always
+    restart: unless-stopped
     environment:
       - TZ=Asia/Shanghai
     volumes:
