--- a/ssh/docker-compose.yaml
+++ b/ssh/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: mritd/ssh
     container_name: ssh
     hostname: ssh
-    restart: always
+    restart: unless-stopped
     environment:
       - TZ=Asia/Shanghai
     volumes:
