--- a/twemproxy/docker-compose.yaml
+++ b/twemproxy/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
   twemproxy:
     image: mritd/twemproxy:v0.4.1
     container_name: twemproxy
-    restart: always
+    restart: unless-stopped
     volumes:
       - ./config.yml:/etc/twemproxy/config.yml
     ports:
