--- a/unblockneteasemusic/docker-compose.yaml
+++ b/unblockneteasemusic/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: nondanee/unblockneteasemusic
     container_name: unblockneteasemusic
     command: ["-s"]
-    restart: always
+    restart: unless-stopped
     networks:
       - caddy
 
