--- a/caddy/conf/Caddyfile
+++ b/caddy/conf/Caddyfile
@@ -1,6 +1,6 @@
 (LOG_FILE) {
     log {
-        format transform "[{ts}] {request>remote_addr} {request>proto} {request>method} <- {status} -> {request>host} {request>uri} {request>headers>User-Agent>[0]}" {
+        format transform "[{ts}] {request>remote_ip} [{status}] {request>proto} {request>method} {request>host} {request>uri} {request>headers>User-Agent>[0]}" {
             time_format "iso8601"
         }
         output file "{args.0}" {
