--- a/headscale/docker-compose.yaml
+++ b/headscale/docker-compose.yaml
@@ -3,17 +3,13 @@ version: "3.9"
 services:
   headscale:
     container_name: headscale
-    image: headscale/headscale:0.16.4
+    image: headscale/headscale
+    restart: unless-stopped
     networks:
       - caddy
-    cap_add:
-      - NET_ADMIN
-      - NET_RAW
-      - SYS_MODULE
-    sysctls:
-      - net.ipv4.ip_forward=1
-      - net.ipv6.conf.all.forwarding=1
-    restart: unless-stopped
+    ports:
+      - 3456:3456/tcp
+      - 3456:3456/udp
     volumes:
       - ./conf:/etc/headscale
       - data:/var/lib/headscale
