--- a/derper/docker-compose.yaml
+++ b/derper/docker-compose.yaml
@@ -1,8 +1,20 @@
 version: '3.9'
 services:
-  derper:
+  tailscale:
+    image: tailscale/tailscale:v1.54.0
+    container_name: tailscale
+    restart: unless-stopped
+    networks:
+      - caddy
+    env_file: .env
+    environment:
+      - TZ=Asia/Shanghai
+    volumes:
+      - socket:/var/run/tailscale
+      - tailscale:/var/lib/tailscale
+  tailscale-derper:
     image: mritd/derper
-    container_name: derper
+    container_name: tailscale-derper
     restart: unless-stopped
     networks:
       - caddy
@@ -11,14 +23,16 @@ services:
       - TZ=Asia/Shanghai
     volumes:
       - /etc/timezone:/etc/timezone
-      - /var/run/tailscale:/var/run/tailscale
-      - config:/var/lib/derper
+      - socket:/var/run/tailscale
+      - derper:/var/lib/derper
     ports:
-      - "3456:3456/udp"
+      - "9325:9325/udp"
 networks:
   caddy:
     name: caddy
     external: true
 
 volumes:
-  config:
+  socket:
+  tailscale:
+  derper:
