--- a/caddy/conf/Caddyfile
+++ b/caddy/conf/Caddyfile
@@ -3,7 +3,7 @@
         format transform "[{ts}] {request>remote_ip} [{status}] {request>proto} {request>method} {request>host} {request>uri} {request>headers>User-Agent>[0]}" {
             time_format "wall"
         }
-        output file "{args[0]}" {
+        output file "/data/logs/{args[0]}.log" {
             roll_size 100mb
             roll_keep 3
             roll_keep_for 7d
