--- a/hysteria/docker-compose.yaml
+++ b/hysteria/docker-compose.yaml
@@ -1,7 +1,6 @@
-version: "3.9"
 services:
   hysteria:
-    image: tobyxdd/hysteria:v2.4.0
+    image: mritd/hysteria
     container_name: hysteria
     restart: always
     network_mode: "host"
