--- a/tgupdater/docker-compose.yaml
+++ b/tgupdater/docker-compose.yaml
@@ -3,14 +3,10 @@ services:
     image: mritd/tgupdater
     container_name: tgupdater
     restart: unless-stopped
+    env_file: .env
     volumes:
       - /etc/timezone:/etc/timezone
       - data:/data
-    environment:
-      - APP_ID
-      - APP_HASH
-      - FIRST_NAME
-      - ID_PREFIX
 #   command: ["bash","-c","sleep 9999999"]
 volumes:
   data:
