--- a/adguard/docker-compose.yaml
+++ b/adguard/docker-compose.yaml
@@ -1,4 +1,3 @@
-
 services:
   adguard:
     image: adguard/adguardhome
@@ -6,18 +5,19 @@ services:
     restart: unless-stopped
     networks:
       caddy:
-        ipv4_address: 172.19.0.88
+        ipv4_address: 172.18.0.222
     environment:
       - TZ=Asia/Shanghai
     volumes:
       - /etc/timezone:/etc/timezone
       - conf:/opt/adguardhome/conf
       - data:/opt/adguardhome/work
-    ports:
-      - "3000:3000"
+
 networks:
   caddy:
     name: caddy
+    external: true
+
 volumes:
   conf:
   data:
