feat(meta): update image
update image

Signed-off-by: kovacs <mritd@linux.com>

--- a/metatube/docker-compose.yaml
+++ b/metatube/docker-compose.yaml
@@ -1,8 +1,6 @@
-
-
 services:
   metatube:
-    image: metatube/metatube-server
+    image: ghcr.io/metatube-community/metatube-server
     container_name: metatube
     restart: unless-stopped
     networks:
