feat(git): update git ignore
update git ignore

Signed-off-by: kovacs <mritd@linux.com>

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,6 @@ trojan/config
 cloudreve/config
 caddy/conf/*.trojan
 caddy/conf/*.caddy
-tuic/conf
+tuic-server/config.toml
 headscale/conf
 hysteria/config.yaml
